app/assets/stylesheets/page.scss
// Place all the styles related to the page controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

body {
  margin: 0;
  // margin-top: 3.5em;

}
.homepageimg {
  // margin-top: 3.5em;
  height: 75em;
  background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url(/assets/people.jpg) 100% no-repeat;
  background-position: center;
  background-repeat: no-repeat;
}

.featuresimg {
  margin-top: 12.5em;
  height: 50em;
  background: linear-gradient( rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55) ), url(/assets/college.jpg) 100% no-repeat;
  background-position: center;
  background-repeat: no-repeat;
}

#homebody {
  text-align:center;
  font-family: 'Roboto', sans-serif;
  color: white;
}

.searchbar {
  font-size: 2.80em;
  margin-top: 0.5em;
  border-radius: 0;
}

#hometitle {
  padding-top:2.5em;
  text-align:center;
  font-family: 'Roboto', sans-serif;
  color: white;
  font-size: 3.5em;
}

#term {
  height: 2.5em;
  margin-right: 50%;
  font-size: 2em;
  border-radius: 0;
}

.search-form {
  padding: 20px 0;
  text-align:center;
  border-radius: 0;
}

.searchbar {
  text-align: center;
  border-radius: 0;
}

@media (max-width: 475px) {
  .homepageimg: url(/assets/decor.jpg/400/600);
  background-size:100%;
  width:100%;
}

#navbar {
  color: #000;
  font-family: 'Marcellus SC', serif;
  font-size: medium;
  background: white;
  background-image: none;
  text-decoration: none;
  height: 4em;
  box-shadow: 1px 1px 2px;
  & a {

    &:hover {
      background-image: none;
      text-decoration: none;
      background-color: #ccc;
    }

  }
}


.btn-square {
  border-radius: 0;
}

#navbutton {
}



.navbar-right {
  // font-size: 1.2em;
  margin-right: 0.05em;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0.75em;
}

.navbtn {
  font-size: 1.2em;
  background: white;
  padding: 23px 16px;
  text-decoration: none;
  // margin: 0 8px;
  color: #000;
  display: inline-flex;


  &:hover {
    background: white;
    background-image: none;
    text-decoration: none;
  }

  &:visited {
    color: #000;
  }

}

.jumbotron {
  background-size: cover;
}

.modal-body {
 text-align: center;
}

#login_body {
 display: inline-flex;
 margin: auto;
}


#mobile_login_buttons {
 display: none;
}

.tab-pane {
 padding: 2em;
}

input {
 font-size: 1.5em;
 padding: 0.5em;
 border: 1px solid rgba(0, 0, 0, 0.3);
}

label {
 font-size: 1.5em;
 padding: 0.3em 0 0.3em
}

.btn-submit {
   font-size: 1.5em;
   padding: 0.5em 1em;
   margin: 0.5em 0 0;
   background-color: lightgrey;
   border: 1px solid rgba(0, 0, 0, 0.3);
}

.btn-default {
   font-size: 1.5em;
   padding: 0.5em 1em;
   margin: 0.5em 0 0;
   background-color: lightgrey;
   border: 1px solid rgba(0, 0, 0, 0.3);
}

.btn-info {
   font-size: 1.5em;
   padding: 0.5em 1em;
   margin: 0.5em 0 0;
   border: 1px solid rgba(0, 0, 0, 0.3);
}

.btn-success {
   font-size: 1.5em;
   padding: 0.5em 1em;
   margin: 0.5em 0 0;
   border: 1px solid rgba(0, 0, 0, 0.3);
   color: #fff;

   &:visited {
     color: #fff;
   }
}

.indextext {
  font-size: 2.5em;
  color: #4d4d4d;
  text-align: center;
  margin-top: 6em;
}

#indextxt {
  font-size: 1.5em;
  color: #4d4d4d;
  text-align: center;
  margin-top: 2em;
}

.btn-primary {
   font-size: 1.5em;
   padding: 0.5em 1em;
   margin: 0.5em 0 0;
  //  background-color: lightgrey;
   border: 1px solid rgba(0, 0, 0, 0.3);
}

.btn-danger {
   font-size: 1.5em;
   padding: 0.5em 1em;
   margin: 0.5em 0 0;
  //  background-color: lightgrey;
   border: 1px solid rgba(0, 0, 0, 0.3);
}

.login_buttons {
  font-size: 1.5em;
  margin: 0.8em;
  padding: 1em;

  &:hover {
    text-decoration: none;
  }
}


.editlistbtn {
  color: #ffffff;
  font-size: 20px;
  background: #337ab7;
  padding: 12px 24px 12px 24px;
  text-decoration: none;
  margin-top: 2em;
  text-align: center;
}

.editlistbtn:hover {
  background: #3e7b9c;
  text-decoration: none;
}

.listbtn {
  color: #ffffff;
  font-size: 20px;
  background: #337ab7;
  padding: 12px 24px 12px 24px;
  text-decoration: none;
  margin-top: 2em;
  text-align: center;
  border: 1px solid rgba(0, 0, 0, 0.3);
}

.listbtn:hover {
  background: #3e7b9c;
  text-decoration: none;
}

.mainpagebtn {
  width: 100%;
  text-align: center;
  margin-top: 3.5em;
}

#mainpagebtn {
  width: 100%;
  text-align: center;
}

/* Start of Column CSS */
#container5 {
  margin-top: 3em;
	clear:left;
	float:left;
	width:100%;
	overflow:hidden;
	background:#eee; /* column 5 background colour */
}
#container4 {
	clear:left;
	float:left;
	width:100%;
	position:relative;
  text-align: center;
	right:20%;
	background:#eee; /* column 4 background colour */
}
#container3 {
	clear:left;
	float:left;
	width:100%;
	position:relative;
	right:20%;
	background:#eee; /* column 3 background colour */
}
#container2 {
	clear:left;
	float:left;
	width:100%;
	position:relative;
	right:20%;
	background:#eee; /* column 2 background colour */
}
#container1 {
	float:left;
	width:100%;
	position:relative;
	right:20%;
	background:#eee; /* column 1 background colour */
}
#col1 {
	float:left;
	width:16%;
	position:relative;
	left:82%;
	overflow:hidden;
}
#col2 {
	float:left;
	width:16%;
	position:relative;
	left:86%;
	overflow:hidden;
}
#col3 {
	float:left;
	width:16%;
	position:relative;
	left:90%;
	overflow:hidden;
}
#col4 {
	float:left;
	width:16%;
	position:relative;
	left:94%;
	overflow:hidden;
}
#col5 {
	float:left;
	width:16%;
	position:relative;
	left:98%;
	overflow:hidden;
}

#tag {
  margin-top: 2em;
  margin-bottom: 0.5em;
  color: #337ab7;
}

#tagtext {
  margin-top: 0.5em;
  margin: 14px;
  margin-bottom: 10.5em;
}

#homebody2 {
  text-align:center;
  font-family: 'Roboto', sans-serif;
  color: white;
}

#hometitle2 {
  padding-top:2.5em;
  text-align:center;
  font-family: 'Roboto', sans-serif;
  color: white;
  font-size: 3.5em;
}

#indexmap {
  height: 0;
}

.footer, .push {
    height: 155px; /* .push must be the same height as .footer */
}

#footctr {
  text-align: center;
  font-family: 'Marcellus SC', serif;
  font-size: 1.5em;
  margin-right: 7em;
  margin-top: 0em;
}

#content {
  padding-top: 1em;
  float:left;
  width:50%;
  text-align: center;
  text-align: left;
}

#sidebar {
  padding-top: 1em;
  float:left;
  width:50%;
  text-align: center;
}

.center {
  padding-top:1em;
  text-align:center;
  font-family: 'Montserrat', sans-serif;
  color: black;
  font-size: 3.5em;
}

.center2 {
  text-align:center;
  font-family: 'Montserrat', sans-serif;
  color: black;
  font-size: 2.75em;
}

#phone {
  text-align: left;
  margin-left: 15em;
  font-size: 0.60em;
  padding-top: 0.5em;
}

#phone2 {
  text-align: right;
  margin-right: 14em;
  font-size: 0.60em;
  padding-top: 0.5em;
}

.search_results {
  float: left;
  width: 60%;
  display: inline-flex;
  flex-wrap: wrap;

  & .listing_result {
    margin: 3em 0;
    height: 23em;

    & .listing_photo {

      & img {
        height: 23em;
        width: 23em;
        border: 4px solid #fff;
      }

      & .listing_rent {

        & h2 {
          font-size: 3em;
          color: #fff;
          position: relative;
          text-shadow: 1px 1px 2px #000;
          top: -1.8em;
          left: 0.1em;
          float: left;
          background-color: rgba(0,0,0,0.3);
          padding-bottom: 0.1em;
        }
      }
    }

    .user_photo {
      & img {
        border-radius: 50%;
        height: 8em;
        border: 4px solid white;
        float: right;
        position: relative;
        top: 18em;
        right: 4em;
      }
    }
  }
}

#rootpath {
  margin-left: 0.1em;
  color: #000;
  font-family: 'Marcellus SC', serif;
  font-size: medium;
  background-image: none;
  text-decoration: none;
  & a {

    &:hover {
      background-image: none;
      text-decoration: none;
    }

  }
}

.friendsimg {
  height: 20em;
  background: linear-gradient( rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25) ), url(/assets/chill.jpg) 100% no-repeat;
  background-position: center;
  background-repeat: no-repeat;
}

#friendtitle {
  font-size: 8em;
  color: white;
  font-family: 'Libre Baskerville';
  text-align: center;
}

#flashbar {
  padding-top: 1.7em;
  color: green;
  font-family: 'Libre Baskerville';
  text-align: center;
}

